Исправляет пути для github pages

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   font-style: normal;
   font-weight: 400;
   src: local(''),
-     url('/fonts/noto-sans-v27-latin_cyrillic-regular.woff2') format('woff2');
+     url('../fonts/noto-sans-v27-latin_cyrillic-regular.woff2') format('woff2');
 }
   /* noto-sans-700 - latin_cyrillic */
 @font-face {
@@ -13,7 +13,7 @@
   font-style: normal;
   font-weight: 700;
   src: local(''),
-     url('/fonts/noto-sans-v27-latin_cyrillic-700.woff2') format('woff2');
+     url('../fonts/noto-sans-v27-latin_cyrillic-700.woff2') format('woff2');
 }
 
   /* variables */
@@ -80,7 +80,7 @@
 }
 
 .button::before {
-  content: url('/images/arrow.svg');
+  content: url('../images/arrow.svg');
   position: absolute;
   display: grid;
   place-items: center;
@@ -105,7 +105,7 @@
 }
 
 .header {
-  background: url('/images/header-bg.jpg') center no-repeat;
+  background: url('../images/header-bg.jpg') center no-repeat;
 }
 
 .header__container {
