--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
 }
 
 .page {
-  height: 100%;
+  /* height: 100%; */
   font-style: var(--font-style);
   font-size: var(--font-size-14);
   line-height: var(--line-heigth);
@@ -59,7 +59,7 @@
 }
 
 .page__body {
-  height: 100%;
+  /* height: 100%; */
   min-width: 320px;
   margin: 0;
 }
@@ -115,7 +115,7 @@
   color: var(--white);
 }
 
-@media (min-width: 700px) {
+@media (min-width: 992px) {
   .header__container {
     padding: 70px 0 38px;
   }
@@ -127,7 +127,7 @@
   font-size: var(--font-size-18);
 }
 
-@media (min-width: 700px) {
+@media (min-width: 992px) {
   .header__content {
     padding: 140px 0 250px;
   }
@@ -141,7 +141,7 @@
   font-weight: var(--font-bold);
 }
 
-@media (min-width: 700px) {
+@media (min-width: 992px) {
   .header__title {
     margin-bottom: 80px;
     font-size: var(--font-size-h1);
@@ -170,4 +170,63 @@
 
 .social-list__icon:hover {
   fill: var(--green);
+}
+
+/* Services */
+.services__container {
+  /* margin: 50px 0; */
+  margin-top: 50px;
+}
+
+@media (min-width: 992px) {
+  .services__container {
+    margin-top: 150px;
+  }
+}
+
+.services__title {
+  margin: 0;
+  font-size: var(--font-size-24);
+  text-transform: uppercase;
+  color: var(--gray);
+}
+
+.services__wrap {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(285px, 1fr));
+  gap: 89px;
+  margin-top: 30px;
+  color: var(--black);
+}
+
+@media (min-width: 992px) {
+  .services__wrap {
+    margin-top: 60px;
+  }
+}
+
+.services-list {
+  margin: 0;
+  padding: 0;
+}
+
+.services-list__title {
+  font-size: var(--font-size-18);
+  font-weight: var(--font-bold);
+}
+
+.services-list__description {
+  margin: 15px 0 50px;
+  padding: 0;
+}
+
+.services-list__description:last-child {
+  margin-bottom: 0;
+}
+
+
+.services__image {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
